bg jump fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,6 @@
     src: url('/fonts/Poppins-Medium.ttf') format('woff2'),
 }
 
-body {
-    background-image: url("bgvector.svg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 @layer base {
     html {
         font-family: "Poppins", sans-serif;
@@ -24,6 +14,23 @@ body {
         font-style: normal;
         font-display: swap;
         background-color: black;
+    }
+
+    .bg {
+        background: url("bgvector.svg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .root {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
     }
 
     .sk-folding-cube {
